# gedi-geoparquet

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
datasets/: GEDI_L2A.txt  GEDI_L2B.txt  GEDI_L4A.txt  GEDI_L4C.txt
schemas/: GEDI_L2A.arrows  GEDI_L2B  GEDI_L2B.arrows  GEDI_L4A.arrows  GEDI_L4C.arrows
scripts/: convert.py  dump_schema.py  generate_schema.py  join.py
src/gedi_geoparquet/: __init__.py  hdf5.py  polars.py  polars_.py  pyarrow.py
src/gedi_geoparquet/schema/: __init__.py  gedi_l2a.py  gedi_l2b.py  gedi_l4a.py  gedi_l4c.py
src/gedi_geoparquet/schema/resources/: gedi_l2a.arrows  gedi_l2b.arrows  gedi_l4a.arrows  gedi_l4c.arrows
