[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gedi-geoparquet"
dynamic = ["version"]
description = "Library for converting GEDI HDF5 files into GeoParquet files."
readme = "README.md"
authors = [
    { name = "Chuck Daniels", email = "chuck@developmentseed.org" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "geoarrow-pyarrow>=0.2.0",
    "h5py>=3.13.0",
    "pyarrow>=20.0.0",
]

[project.urls]
Homepage = "https://github.com/MAAP-Project/gedi-geoparquet"
Issues = "https://github.com/MAAP-Project/gedi-geoparquet/issues"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pyarrow-stubs>=20.0.0.20250716",
    "ruff>=0.11.8",
]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
files = ["src", "tests"]
strict = true

[[tool.mypy.overrides]]
module = ["h5py"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]

[tool.uv]
package = true
